--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
       "/CachedImageExample/"
     ],
     "modulePathIgnorePatterns": [
+      "/__tests/",
       "/CachedImageExample/"
     ],
     "verbose": true
@@ -50,8 +51,8 @@
     "crypto-js": "3.1.9-1",
     "lodash": "4.17.19",
     "prop-types": "15.5.10",
-    "react-native-clcasher": "1.0.0",
-    "react-native-fetch-blob": "0.10.8",
+    "react-native-clcasher": "1.0.0",	
+    "rn-fetch-blob": "0.10.16",
     "url-parse": "1.1.9"
   },
   "devDependencies": {
